--- a/Celery_Project/requirements.txt
+++ b/Celery_Project/requirements.txt
@@ -1,25 +1,44 @@
 amqp==5.2.0
 asgiref==3.8.1
 async-timeout==5.0.1
+attrs==24.2.0
+autobahn==24.4.2
+Automat==24.8.1
 billiard==4.2.1
 celery==5.4.0
+cffi==1.17.1
 channels==4.1.0
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+constantly==23.10.4
+cryptography==43.0.3
+daphne==4.1.2
 Django==5.1.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
 kombu==5.4.2
 prompt_toolkit==3.0.48
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 PyJWT==2.9.0
+pyOpenSSL==24.2.1
 python-dateutil==2.9.0.post0
 redis==5.2.0
+service-identity==24.2.0
 six==1.16.0
 sqlparse==0.5.1
 statsd==4.0.1
+tomli==2.0.2
+Twisted==24.10.0
+txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.2
 vine==5.1.0
 wcwidth==0.2.13
+zope.interface==7.1.1
